--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -13,6 +13,8 @@
   {% include 'header.njk' %}
   {{ content | safe }}
   {% include 'footer.njk' %}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="/app.js"></script>
 </body>
 
