--- a/src/_includes/instagram.njk
+++ b/src/_includes/instagram.njk
@@ -12,7 +12,7 @@
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
   </div>
-  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto">
+  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
     <span>@jessie</span>
     <img src="../assets/svg/arrow.svg" alt="arrow">
   </button>
