--- a/src/services.njk
+++ b/src/services.njk
@@ -121,7 +121,7 @@ layout: 'mainlayout.njk'
 
 <section class="portfolio--secondary container inline-padding">
   <div class="portfolio__text-container">
-    <h2 class="portfolio__title text-center heading-3">My clients</h2>
+    <h2 class="portfolio__title text-center">My clients</h2>
     <button class="btn btn--icon cta portfolio__btn portfolio__btn--desktop">
       <span>See portfolio</span>
       <img src="/assets/svg/arrow.svg" alt="arrow">
