--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,6 +4,9 @@
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
+          <a href="/index.html">Home</a>
+        </li>
+        <li class="footer-section__item">
           <a href="/services">Services</a>
         </li>
         <li class="footer-section__item">
