--- a/src/style.css
+++ b/src/style.css
@@ -994,7 +994,7 @@ header {
 
 .footer {
   margin-top: calc(var(--nav-height) * 2);
-  margin-bottom: calc(var(--nav-height) * 0.5);
+  margin-bottom: calc(var(--nav-height) * 0.1);
 }
 
 .footer__line {
@@ -1004,28 +1004,36 @@ header {
 }
 
 .footer__container {
+  /* Layout */
   display: flex;
-  gap: 2rem;
-  flex-wrap: wrap;
+  gap: 1rem;
   justify-content: space-between;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+  /* Spacing */
+  padding-bottom: 2.5rem;
 }
 
 .footer-section {
-  width: 200px;
-}
-
-.footer-section__list {
-  font-weight: 300;
+  align-self: flex-end;
 }
 
 .footer-section__item {
   display: block;
-  margin-bottom: 1.5rem;
+}
+
+.footer-section__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  margin-right: 5rem;
 }
 
 .socials__list {
   display: flex;
-  gap: 12px;
+  gap: 1.5rem;
 }
 
 .socials__link {
@@ -1055,11 +1063,6 @@ header {
 @media (min-width: 480px) {
   .socials__list {
     margin-left: auto;
-  }
-
-  .socials__section {
-    justify-self: end;
-    align-self: end;
   }
 }
 
