--- a/src/_includes/instagram.njk
+++ b/src/_includes/instagram.njk
@@ -1,5 +1,5 @@
 <section class="instagram container">
-  <div class="inline-padding instagram__text-container">
+  <div class="inline-padding instagram__text-container animatedObj">
     <h2 class="instagram__title">Follow me on Instagram</h2>
     <button class="btn btn--icon cta instagram__btn instagram__btn--desktop">
       <span>@jessie</span>
@@ -12,9 +12,11 @@
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
   </div>
-  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
-    <span>@jessie</span>
-    <img src="../assets/svg/arrow.svg" alt="arrow">
-  </button>
+  <div class="inline-padding btn-container">
+    <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
+      @jessie
+      <img src="../assets/svg/arrow.svg" alt="arrow">
+    </button>
+  </div>
 
 </section>
