--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,9 @@ layout: 'mainlayout.njk'
 ---
 
 <section class="hero-header hero-header--about">
-  <h1 class="hero-header__title container inline-padding">About Me</h1>
+  <div class="hero-header__title-container container inline-padding">
+    <h1 class="hero-header__title animatedObj">About Me</h1>
+  </div>
 </section>
 
 <section class="container inline-padding about__heading">
