--- a/src/portfolio/portfolio.njk
+++ b/src/portfolio/portfolio.njk
@@ -5,7 +5,9 @@ layout: 'mainlayout.njk'
 ---
 
 <section class="hero-header hero-header--portfolio">
-  <h1 class="hero-header__title container inline-padding">Portfolio</h1>
+  <div class="hero-header__title-container inline-padding container">
+    <h1 class="hero-header__title animatedObj">About Me</h1>
+  </div>
 </section>
 
 <!-- gallery -->
