--- a/src/services.njk
+++ b/src/services.njk
@@ -5,7 +5,9 @@ layout: 'mainlayout.njk'
 ---
 
 <section class="hero-header hero-header--services">
-  <h1 class="hero-header__title container inline-padding">Services</h1>
+  <div class="hero-header__title-container container inline-padding">
+    <h1 class="hero-header__title animatedObj">About Me</h1>
+  </div>
 </section>
 
 <!-- service content -->
