--- a/src/_includes/instagram.njk
+++ b/src/_includes/instagram.njk
@@ -7,10 +7,10 @@
     </button>
   </div>
   <div class="instagram__images">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
   </div>
   <div class="inline-padding btn-container">
     <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
