--- a/src/about.njk
+++ b/src/about.njk
@@ -35,7 +35,7 @@ layout: 'mainlayout.njk'
   <div class="container container--reasons">
     <div class="reasons__side">
       <div class="reasons__img-container">
-        <img src="../assets/images/header__img.jpg" alt="">
+        <img src="../assets/images/header__img.webp" alt="">
       </div>
     </div>
     <div class="reasons__main inline-padding">
@@ -95,11 +95,11 @@ layout: 'mainlayout.njk'
     </button>
   </div>
   <div class="portfolio__images">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.webp" alt="">
   </div>
   <button class="btn btn--icon cta portfolio__btn portfolio__btn--mobile">
     <span>See portfolio</span>
