--- a/src/index.njk
+++ b/src/index.njk
@@ -16,7 +16,7 @@ services_h2: "I do makeup for"
 
 
 <section class="hero container">
-  <img class="hero__image" src="../assets/images/header__img.jpg" alt="<header description>">
+  <img class="hero__image" src="../assets/images/header__img.webp" alt="<header description>">
   <div class="container container--hero">
     <div class="hero__heading">
       <h1>Bring your</h1>
@@ -37,7 +37,7 @@ services_h2: "I do makeup for"
   <div class="container inline-padding container--hero-two">
     <h2 class="hero-two__description">{{ second_hero_description }}</h2>
     <div class="hero-two__image-wrapper animatedObj">
-      <img class="hero-two__image" src="../assets/images/header__img.jpg" alt="<header description>">
+      <img class="hero-two__image" src="../assets/images/header__img.webp" alt="<header description>">
       <div class="hero-two__image-cover"></div>
     </div>
   </div>
@@ -55,7 +55,7 @@ services_h2: "I do makeup for"
     <section class="services__cards">
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -66,7 +66,7 @@ services_h2: "I do makeup for"
       </div>
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -77,7 +77,7 @@ services_h2: "I do makeup for"
       </div>
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -103,7 +103,7 @@ services_h2: "I do makeup for"
         <img src="../assets/svg/arrow.svg" alt="arrow">
       </button>
     </div>
-    <img loading="lazy" class="about__image" src="../assets/images/header__img.jpg" alt="Home Page-About-Jessie">
+    <img loading="lazy" class="about__image" src="../assets/images/header__img.webp" alt="Home Page-About-Jessie">
   </div>
 </section>
 
@@ -118,14 +118,14 @@ services_h2: "I do makeup for"
     </div>
     <div class="portfolio__grid">
       <div class="portfolio__grid-area area-a">
-        <img loading="lazy" class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img loading="lazy" class="portfolio__image" src="../assets/images/header__img.webp" alt="">
       </div>
       <div class="portfolio__grid-area area-b">
-        <img loading="lazy" class="portfolio__image portfolio__image--special" src="../assets/images/header__img.jpg"
+        <img loading="lazy" class="portfolio__image portfolio__image--special" src="../assets/images/header__img.webp"
           alt="">
       </div>
       <div class="portfolio__grid-area area-c">
-        <img loading="lazy" class="portfolio__image portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img loading="lazy" class="portfolio__image portfolio__image" src="../assets/images/header__img.webp" alt="">
       </div>
     </div>
   </div>
