--- a/src/services.njk
+++ b/src/services.njk
@@ -6,7 +6,7 @@ layout: 'mainlayout.njk'
 
 <section class="hero-header hero-header--services">
   <div class="hero-header__title-container container inline-padding">
-    <h1 class="hero-header__title animatedObj">About Me</h1>
+    <h1 class="hero-header__title animatedObj">Services</h1>
   </div>
 </section>
 
@@ -130,11 +130,11 @@ layout: 'mainlayout.njk'
     </button>
   </div>
   <div class="portfolio__images">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.jpg" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.webp" alt="">
   </div>
   <button class="btn btn--icon cta portfolio__btn portfolio__btn--mobile">
     <span>See portfolio</span>
