--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="preload" href="/style.css" as="style" />
+  <link rel="preload" href="/app.js" as="script" />
+
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
