--- a/src/style.css
+++ b/src/style.css
@@ -1102,7 +1102,7 @@ header {
   /* Layout */
   display: grid;
   align-items: end;
-  min-height: 90vh;
+  min-height: calc(100vh-var(--nav-height));
 
   /* Others */
 
