--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -18,7 +18,7 @@
   {% include 'footer.njk' %}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-  <script src="/app.js"></script>
+  <script src="/app.js" type="module"></script>
 </body>
 
 </html>
